--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "ejs": "^2.4.1",
     "express": "4.10.2",
     "method-override": "^2.3.7",
+    "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "socket.io": "1.2.0"
   },
