--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cors": "^2.8.1",
     "ejs": "^2.4.1",
     "express": "4.10.2",
+    "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "pg": "^6.1.0",
     "socket.io": "1.2.0"
   },
