--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "wdiconfapi",
-  "version": "0.0.1",
-  "description": "WDI Conf API",
+  "version": "1.0.0",
+  "description": "[http://wdiconfapi.herokuapp.com/](http://wdiconfapi.herokuapp.com/)",
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
@@ -17,10 +14,21 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "pg": "^6.1.0",
-    "socket.io": "1.2.0",
+    "socket.io": "1.2.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kschan1/wdiconfapi"
-  }
+    "url": "git+https://github.com/jamesmah/wdiconfapi.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jamesmah/wdiconfapi/issues"
+  },
+  "homepage": "https://github.com/jamesmah/wdiconfapi#readme"
 }
