--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "pg": "^6.1.0",
-    "socket.io": "1.2.0"
+    "socket.io": "1.2.0",
+    "stripe": "^4.14.0"
   },
   "devDependencies": {},
   "scripts": {
